# MiroFish

./: README.md
.git-agent/: config.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/scripts/: oasis_embedding_adapter.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
backend/stubs/sentence-transformers-stub/: pyproject.toml
backend/stubs/sentence-transformers-stub/sentence_transformers/: __init__.py
backend/stubs/torch-stub/: pyproject.toml
backend/stubs/torch-stub/torch/: __init__.py
backend/stubs/torch-stub/torch/cuda/: __init__.py
backend/stubs/transformers-stub/: pyproject.toml
backend/stubs/transformers-stub/transformers/: __init__.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/views/: MainView.vue
