[project]
name = "sentence-transformers"
version = "3.0.0"
description = "Stub for sentence-transformers -- real embedding handled by Gemini API"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentence_transformers"]
