[project]
name = "torch"
version = "2.11.0"
description = "Lightweight numpy-backed torch stub for import compatibility"
requires-python = ">=3.11"
dependencies = ["numpy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["torch"]
