[project]
name = "transformers"
version = "4.57.6"
description = "Stub for transformers -- local models not used, embedding via Gemini API"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transformers"]
